fix: force to use well-configured product function

--- a/package.json
+++ b/package.json
@@ -30,6 +30,20 @@
     "extends": [
       "react-app",
       "react-app/jest"
+    ],
+    "overrides": [
+      {
+        "files": ["*"],
+        "excludedFiles": ["immer.ts"],
+        "rules": {
+          "no-restricted-imports": [
+            "error",
+            {
+              "paths": ["immer"]
+            }
+          ]
+        }
+      }
     ]
   },
   "browserslist": {
