--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "immer": "^9.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-scripts": "4.0.3",
     "type-route": "^0.6.0",
     "typescript": "^4.1.2",
@@ -87,5 +88,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-helmet": "^6.1.2"
   }
 }
