--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-helmet": "^6.1.2"
+    "@types/react-helmet": "^6.1.2",
+    "firebase-tools": "^9.16.0"
   }
 }
