--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "deploy": "yarn build && firebase deploy --only hosting",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
