--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,5 +29,5 @@ jobs:
       - name: test
         run: yarn test
       - name: deploy
-        if: github.ref == 'refs/heads/main'
+        # if: github.ref == 'refs/heads/main'
         run: yarn deploy --token "${{ secrets.FIREBASE_TOKEN }}"
