--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,4 +30,4 @@ jobs:
         run: yarn test
       - name: deploy
         # if: github.ref == 'refs/heads/main'
-        run: yarn deploy --token "${{ secrets.FIREBASE_TOKEN }}"
+        run: yarn deploy --token "${{ secrets.FIREBASE_TOKEN }}" --project "${{ secrets.FIREBASE_PROJECT }}"
